--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <script src="files/pixi.min.js" charset="utf-8"></script>
     <style>* {padding: 0; margin: 0}</style>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <script src="files/game.js" charset="utf-8"></script>
   </body>
 </html>
