--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Title</title>
-    <script src="files/pixi.min.js" charset="utf-8"></script>
-    <style>* {padding: 0; margin: 0}</style>
-  </head>
-  <body oncontextmenu="return false;">
-    <script src="files/game.js" charset="utf-8"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Title</title>
+  <style>
+  * {
+    padding: 0;
+    margin: 0
+  }
+  canvas{
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+  }
+  </style>
+</head>
+<body oncontextmenu="return false;">
+  <script src="files/bundle.js" charset="utf-8"></script>
+</body>
 </html>
