Refactoring, added external functions

--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,9 @@
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
   }
+  .hidden{
+    visibility: hidden;
+  }
   </style>
 </head>
 <body oncontextmenu="return false;">
