--- a/files/styles.css
+++ b/files/styles.css
@@ -1,8 +1,7 @@
-  * {
-    padding: 0;
-    margin: 0
-  }
+
   canvas{
+    padding: 0;
+    margin: 0;
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
   }
