--- a/files/views/home.html
+++ b/files/views/home.html
@@ -9,7 +9,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" ng-init="name='Lobby'" ng-model="name" placeholder="name">
                 <span class="input-group-btn">
-                    <button class="btn btn-success" ng-click="$parent.createLobby(name)">Create Lobby</button>             
+                    <button class="btn btn-success" ng-click="createLobby(name)">Create Lobby</button>             
                 </span>
             </div>
         </div>
