--- a/files/views/lobby.html
+++ b/files/views/lobby.html
@@ -10,7 +10,7 @@
         <div class="col-xs-12">
             <h2>Players</h2>
             <ul class="list-group">
-                <li class="list-group-item" ng-repeat="player in $parent.players">{{player.id}}</li>
+                <li class="list-group-item" ng-repeat="player in $parent.players">{{player.name}}</li>
             </ul>
         </div>
     </div>
