Started work on inventory.

--- a/files/views/outcome.html
+++ b/files/views/outcome.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 ng-class="success?'text-success':'text-danger'">{{success?'Mission success!':'Mission failed!'}}</h1>
-            <a class="btn btn-default" href="/lobby">Continue</a>
+            <a class="btn btn-default" href="/inventory">Continue</a>
         </div>
     </div>
 </div>
