--- a/files/styles.css
+++ b/files/styles.css
@@ -1,10 +1,20 @@
+canvas {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 
-  canvas{
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-  }
-  .hidden{
-    visibility: hidden;
-  }
+.hidden {
+  visibility: hidden;
+}
+
+.list-button {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+}
