--- a/files/views/lobby.html
+++ b/files/views/lobby.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h1>{{lobbyName}}</h1>
-            <button class="btn btn-success" ng-click="startGame()" ng-show="isServer()">Start</button>
+            <a href="/inventory" class="btn btn-success" ng-show="isServer()">Start</a>
             <button class="btn btn-success" ng-click="makePublic()" ng-show="isServer()" ng-disabled="public">Make Public</button>
         </div>
     </div>
